tools/tock-configurator/parse-macros/tests/02.stderr
error: expected `struct`
 --> ./tests/02.rs:4:5
  |
4 | pub enum Uart2 {}
  |     ^^^^
