tools/tock-configurator/parse-macros/tests/02.rs
use parse_macros::component;

#[component(ident = "uart")]
pub enum Uart2 {}

fn main() {}
